<resources>
    <string name="app_name">Translator</string>
    <string name="error_textview_stub">Error</string>
    <string name="reload_button">Reload</string>
    <string name="undefined_error">Undefined error</string>
    <string name="empty_server_response_on_success">Response from server is empty</string>
    <string name="button_search">Search</string>
    <string name="search_hint">New word</string>
    <string name="delete_description">X</string>
    <string name="search_meaning">Поиск значения</string>
    <string name="search_history">История поиска</string>
    <string name="image_of_the_word">Изображение слов</string>
    <string name="search">Поиск</string>
</resources>